# MinimalQtTestApp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  MinimalQtTestApp_build_config.h.in  README.md  cmake-android.sh  fetchcontent-lockfile.json
.github/workflows/: Qt5AndroidSupport.cmake  build-android.yml  build.yml
_clean/: ReleaseFolderCleaner.cfg
doc/: use for architecture diagrams and code docs
doc/stores/playstore/: README.md  presentation.xcf
doc/temp/: android_build_hints.txt
gui/Qt/: qml.qrc
gui/Qt/MinimalQtTestApp/: AppWindow.qml  MinimalQtTestApp.qmlproject
gui/Qt/MinimalQtTestApp/cfg/: CfgProgMain.qml
installer/_content_for_bindir/_ico/android/res/drawable/: ic_launcher_foreground.xml
installer/auto/windows/: .project  bindir.py
sdks/: CMakeLists.txt
src/_gui/interface/: resource_ids.h  resource_ids.test.cpp  resource_string.cpp  resource_string.h  resource_string.test.cpp
src/_gui/src_Qt/: main.cpp  resource_string.h
src/_gui/src_Qt/resource_string/: resource_string.cpp  resource_string.h  resource_string.test.cpp
src/_gui/src_WinCmdLine/: main.cpp  resource_string.cpp  resource_string.h
